package Gamificacion_Modulo;

public interface EstrategiaVisualizacion {
    void visualizar(Estadistica estadistica);
} 