package Gamificacion_Modulo;

import java.util.List;

public class VisualizacionLogros implements EstrategiaVisualizacion {
    private List<Logro> logrosDisponibles;

    public VisualizacionLogros() {
        // Constructor sin implementación
    }

    @Override
    public void visualizar(Estadistica estadistica) {
        // Método sin implementación
    }

    public void mostrarLogrosDesbloqueados() {
        // Método sin implementación
    }
} 