package Gamificacion_Modulo;

import java.util.Map;

public class VisualizacionProgreso implements EstrategiaVisualizacion {
    private Map<String, Double> datosProgreso;

    public VisualizacionProgreso() {
        // Constructor sin implementación
    }

    @Override
    public void visualizar(Estadistica estadistica) {
        // Método sin implementación
    }

    public void mostrarBarrasProgreso() {
        // Método sin implementación
    }
} 