package Gamificacion_Modulo;

public class VisualizadorEstadistico {
    private EstrategiaVisualizacion estrategia;

    public VisualizadorEstadistico(EstrategiaVisualizacion estrategia) {
        // Constructor sin implementación
    }

    public void setEstrategia(EstrategiaVisualizacion estrategia) {
        // Método sin implementación
    }

    public void visualizar(Estadistica estadistica) {
        // Método sin implementación
    }
} 